# legal-platform

./: .env.example  .gitignore  README.md  docker-compose.yml  legal_platform_tz_prompt_2.md  package.json
apps/api/: .env.example  pyproject.toml  requirements.txt
apps/api/app/: db.py  main.py  seed.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/routes/: auth.py  requests.py  users.py
apps/api/app/core/: config.py  security.py
apps/api/app/entities/: models.py
apps/api/app/models/: schemas.py
apps/api/app/repositories/: request_repository.py  user_repository.py
apps/web/: package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
docs/: phase-0-foundation.md
docs/adr/: 0001-foundation-stack.md  0002-auth-and-persistence-foundation.md  0003-legal-queue-workflow.md  0004-web-api-demo-integration.md  0005-vercel-deployment-prep.md
docs/deployment/: vercel.md
