[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-platform-api"
version = "0.1.0"
description = "FastAPI backend for legal-platform"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "sqlalchemy>=2.0.36,<3.0.0"
]

[tool.setuptools]
packages = ["app"]
